--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ and distributed data processing tools.</p>
                             <span class="tech-tag">Deployment Workflow</span>
                         </div>
 
-                        <a href="#" class="btn btn-primary">Allready Viewing the Project</a>
+                        <a href="#" class="btn btn-primary">Already Viewing the Project</a>
                     </div>
                 </div>
             </div>
@@ -544,4 +544,5 @@ Gained early exposure to scientific reasoning, data interpretation, and discipli
 </body>
 
 </html>
+
 
